# TD_Builder_alpha

./: .env.template  .gitignore  CHANGELOG.md  MODES.md  NOTICE  PREREQUISITES.md  README.md  bootstrap.py  paths.py  pyproject.toml
.github/: requirements-light.txt
Agents/: README.md
Config/: .env.template  SETTINGS.md  search_config.json
KB/: KBU_COMPLETENESS_PROOF.txt  KBU_REPORT.md  README.md  docked_dats.json  manifest.json  palette_components.json  run_completeness_proof.py
MCP/: COMM_LAYER.md  README.md  claude_desktop_config.json  env_identity.py  feedback.py  feedback_classify.py  live_server.py  live_tool_risk.json  server.py  server_instructions.py
META_AGENTIC_TOOL/: .gitignore  BUGS.md  CLAUDE.md  Codex_init.md  EXECUTION_COMPLETION_REPORT.txt  FORMAT_SPECIFICATION.md  IMPROVEMENTS_BACKLOG.md  INSTALL.md  KB_INTEGRATION_SUMMARY.md  KNOWLEDGE_BASE_AUDIT.md  ORCHESTRATOR_LOG.md  PLANNING_PROMPT.md  README.md  SESSION_REPORT.md  SESSION_REPORT_TEMPLATE.md  TEST_MATRIX.md  TEST_RESULTS.md  TOX_BUILDER_PLAN.md  WORKFLOW_EXECUTION_SUMMARY.md  WORKFLOW_OUTPUTS_INDEX.md  add_userguide_to_embeddings.py  batch_class_semantics.py  batch_concept_semantics.py  batch_operator_semantics.py  build_teardrop.py  claude_desktop_suggestions.md  codex_init_details.txt  consolidate_operator_semantics.py  create_embeddings.py  enhanced_graph_query.py  example_kb_usage.py  extract_class_docs.py  extract_class_facts.py  extract_operator_wiki.py  extract_param_schemas.py  extract_python_examples.py  generate_haiku_prompts.py  generate_palette_prompts.py  hybrid_search.py  ingest_glsl_templates.py  (+30 more)
Tools/: TOOLS.md
core/: README.md
docs/: ALPHA_COMPARISON_REPORT.md  AUDIT_FOLLOWUP.md  CI.md  DEMO_WALKTHROUGH.md  KB_CONTENTS.md  KNOWN_ISSUES.md  NON_NEGOTIABLES.md  TOE_FORMAT_LEARNINGS.md  TOOL_RISK_ANNOTATIONS.md  VERIFIED_TOOL_SIGNATURES.md
eval/: README.md  baseline.json  build_sweet16.py  coverage_meta.json  coverage_minimal.jsonl  coverage_queries.jsonl  coverage_report.py  coverage_subset.jsonl  diff_arms.py  gen_coverage.py  heldout_param_unnamed.jsonl  heldout_queries.jsonl  labeled_queries.jsonl  minimal_cover.py  param_unnamed_queries.jsonl  paraphrase_cache.json  pool_diag.py  predicates.py  review_sheet.py  run_eval.py  sweet16_queries.jsonl  tool_baseline.json  tool_coverage.py  topk_sweep.py
kb_build/: README.md  build_bm25.py  build_kb.py  build_models.py  common.py  gen_operator_types.py  gen_report.py  harvest_palette_components.py  ingest_build.py  ingest_concepts.py  ingest_examples.py  ingest_guides.py  ingest_operators.py  ingest_palette.py  ingest_python.py  ingest_recipes.py  rebuild_graph.py  reembed.py  register_user_component.py  user_components.py
kb_pipeline/: ALPHA_GATE_CHECKLIST.md  HANDOFF.md  MODEL_SELECTION_GUIDE.md  ORCHESTRATOR_DIAGRAM.md  ORCHESTRATOR_PLANNING_PROMPT.md  PHASE5_COMPLETE.md  PRE_ALPHA_DOGFOOD_PLAN.md  README.md  TD_BUILDER_ROADMAP.md  TD_FILE_FORMAT_PLANNING_PROMPT.md  TOX_RESEARCH_GUIDE.md  benchmark_phase5.py  benchmark_results.json  build_graph.py  build_vectors.py  convert_graph_to_json.py  create_chroma_from_embeddings.py  enrich_metadata.py  extract_palette_summaries.py  hybrid_retrieval.py  (+7 more)
(+3298 files in other folders)
