[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "td-builder"
version = "0.1.0-alpha"
description = "AI-driven TouchDesigner network builder/validator + MCP server with a unified knowledge base"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "See LICENSE" }
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.25",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
  "chromadb",
  "pyyaml",
  "jsonschema",
  "networkx>=3.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.18.0"]  # Mode 2 only (spawn_engineer / spawn_expert)
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.2",
  "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 600
markers = [
  "slow: first-run KB/model warm-up or large datasets",
  "live_td: requires TouchDesigner WebServer on 127.0.0.1:9981",
  "mode2: requires ANTHROPIC_API_KEY (spawn_* / agent eval)",
  "promote: writes/updates a stored baseline",
]
filterwarnings = ["ignore::DeprecationWarning"]

[project.scripts]
td-validate = "tools.td_validate:main"
td-convert = "tools.td_convert:main"
td-build = "tools.td_build:main"

[tool.setuptools]
# The engine code lives in subsystem dirs and is wired via bootstrap.py /
# MCP/python/server.py rather than installed as flat packages (alpha hybrid
# layout). Only the thin CLI launchers are packaged here.
packages = ["tools"]

[tool.td-builder]
kb_bundle = "KB"
mcp_server = "MCP/python/server.py"
td_webserver_asset = "MCP/td-webserver/mcp_webserver_base.tox"
