[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "td-builder"
version = "0.2.0"
description = "Key-free TouchDesigner network builder/validator + MCP server with a local knowledge base"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.25",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
  "chromadb",
  "pyyaml",
  "jsonschema",
  "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.2",
  "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 600
markers = [
  "slow: first-run KB/model warm-up or large datasets",
  "live_td: requires TouchDesigner WebServer on 127.0.0.1:9981",
  "promote: writes/updates a stored baseline",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
# Deps-only install: the engine + servers are wired via bootstrap.py / sys.path
# (see MCP/server.py), not installed as importable packages. The offline CLIs
# live in "Tools/offline Builder tools/" and are run directly with python.
packages = []

[tool.td-builder]
kb_bundle = "KB"
mcp_server = "MCP/server.py"
td_webserver_asset = "MCP/td-webserver/mcp_webserver_base.tox"
